Finished basic routing and details

--- a/src/app/dashboard/patients/patients.component.html
+++ b/src/app/dashboard/patients/patients.component.html
@@ -1,3 +1,7 @@
 <p>
   patients works!
 </p>
+<input type="button" value='Detais' (click)='openPatientDetails()' />
+<div *ngIf='patientDetails'>
+  <app-patientsdetails></app-patientsdetails>
+</div>
