--- a/src/app/dashboard/patients/patients.component.html
+++ b/src/app/dashboard/patients/patients.component.html
@@ -1,7 +1,7 @@
 <p>
   patients works!
 </p>
-<input type="button" value='Detais' (click)='openPatientDetails()' />
+<input type="button" value='Detais' (click)='openPatientDetails(1)' />
 <div *ngIf='patientDetails'>
   <app-patientsdetails></app-patientsdetails>
 </div>
