--- a/src/app/dashboard/patients/patients.component.scss
+++ b/src/app/dashboard/patients/patients.component.scss
@@ -7,3 +7,10 @@ div#navbarNav {
     }
   }
 }
+
+.row{
+  margin: 2%;
+  .list-header{
+    background-image: linear-gradient(to right, white , blue);
+  }
+}
