--- a/src/app/dashboard/patients/patients.component.html
+++ b/src/app/dashboard/patients/patients.component.html
@@ -9,7 +9,7 @@
           <a class="nav-link" href="#">Select User <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Login Name</a>
+          <a class="nav-link" href="#">{{login_Name}}</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Log Out</a>
