Updated style for Main Page

--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,6 +1,11 @@
+
 .login{
   position: relative;
   text-align: center;
+  width: 1020px;
+  margin: auto;
+  background-color: white;
+  border-bottom: 1px solid black;
 }
 
 div{
