--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,26 @@
-<div class="login">
-  <h2>LOGIN</h2>
-  <p>{{message}}</p>
-  <div class="formcontrol">
-    <p> User Name</p>
-    <div>
-      <!-- <input  type="email" placeholder="a@mail.com" required> -->
-      <input id="name" name="name" type="name" placeholder="Name"
-      required minlength="4" appForbiddenName="bob"
-      [(ngModel)]="name" >
+<div class="layout">
+  <div class="login">
+    <h2>LOGIN</h2>
+    <p>{{message}}</p>
+    <div class="formcontrol">
+      <p> User Name</p>
+      <div>
+        <!-- <input  type="email" placeholder="a@mail.com" required> -->
+        <input id="name" name="name" type="name" placeholder="Name" required minlength="4" appForbiddenName="bob"
+          [(ngModel)]="name">
 
 
-    </div>
-    <div>
-      <input type="password" placeholder="12345" required>
-    </div>
+      </div>
+      <div>
+        <input type="password" placeholder="12345" required>
+      </div>
 
 
-    <div class="btn_login">
-      <p (click)="login()" *ngIf="!authService.isLoggedIn">Login</p>
-    </div>
-    <!-- <button (click)="login()" *ngIf="!authService.isLoggedIn">Login</button>
+      <div class="btn_login">
+        <p (click)="login()" *ngIf="!authService.isLoggedIn">Login</p>
+      </div>
+      <!-- <button (click)="login()" *ngIf="!authService.isLoggedIn">Login</button>
     <button (click)="logout()" *ngIf="authService.isLoggedIn">Logout</button> -->
+    </div>
   </div>
 </div>
