--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,22 +5,36 @@
     <div class="formcontrol">
       <p> User Name</p>
       <div>
-        <!-- <input  type="email" placeholder="a@mail.com" required> -->
-        <input id="name" name="name" type="name" placeholder="Name" required minlength="4" appForbiddenName="bob"
-          [(ngModel)]="name">
+        <input id="username" name="username" placeholder="User Name" required minlength="4" [(ngModel)]="name"
+          #username="ngModel">
+
+        <div *ngIf="username.invalid && (username.dirty || username.touched)" class="alert alert-danger">
+
+          <div *ngIf="username?.errors.required">
+            Username is required.
+          </div>
+          <div *ngIf="username?.errors.minlength">
+            Name must be at least 4 characters long.
+          </div>
 
 
+        </div>
       </div>
       <div>
-        <input type="password" placeholder="12345" required>
-      </div>
+        <input id="passwrd" name="passwrd" type="password" required placeholder="12345" [(ngModel)]="password" #passwrd="ngModel">
+        <div *ngIf="passwrd.invalid && (passwrd.dirty || passwrd.touched)" class="alert alert-danger">
 
+          <div *ngIf="passwrd?.errors.required">
+            Password is required.
+          </div>
 
-      <div class="btn_login">
-        <p (click)="login()" *ngIf="!authService.isLoggedIn">Login</p>
-      </div>
-      <!-- <button (click)="login()" *ngIf="!authService.isLoggedIn">Login</button>
+        </div>
+
+        <div class="btn_login" [ngClass]="username.valid && passwrd.valid? '' : 'disable'">
+          <p (click)="login()" *ngIf="!authService.isLoggedIn">Login</p>
+        </div>
+        <!-- <button (click)="login()" *ngIf="!authService.isLoggedIn">Login</button>
     <button (click)="logout()" *ngIf="authService.isLoggedIn">Logout</button> -->
+      </div>
     </div>
   </div>
-</div>
