--- a/src/app/dashboard/patients/patients.component.scss
+++ b/src/app/dashboard/patients/patients.component.scss
@@ -10,6 +10,8 @@ div#navbarNav {
 
 .row{
   margin: 2%;
+  height: 450px;
+  overflow: scroll;
   .list-header{
     background-image: linear-gradient(to right, white , blue);
   }
